--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -46,6 +46,16 @@
     outline: none;
 }
 
+.search-bar> .btn{
+    cursor: pointer;
+    color: var(--blue);
+}
+
+.search-bar> .btn:hover{
+    color: var(--dark-blue);
+    transition: all ease-in-out 0.3s;
+}
+
 .stats{
     width: 100%;
     justify-content: space-between;
